<resources>
    <string name="app_name">SahPathi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Username">Shikhar Srivastava</string>
    <string name="collegename">Dr B.R. Ambedkar NIT Jalandhar</string>
    <string name="branch">Instrumentation and Control engineering</string>
    <string name="group">ICE-B3</string>

    <string name="timetable_fragment_heading">My Schedule</string>
    <string name="time_table_fragment_mon">Mon</string>
    <string name="time_table_fragment_tue">Tue</string>
    <string name="time_table_fragment_wed">Wed</string>
    <string name="time_table_fragment_thu">Thu</string>
    <string name="time_table_fragment_fri">Fri</string>
    <string name="time_table_fragment_sat">Sat</string>
    <string name="time_table_fragment_sun">Sun</string>
    <string name="time_table_fragment_day_display_default">Default</string>


    <string name="resources_fragment_heading">My Resources</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Plan your classes well!  </string>
    <string name="second_slide_title"> Stay Updated</string>
    <string name="third_slide_title">Your Smart Friend</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Helps you Plan your weekly and monthly goals and keep a track on your time table and classrooms.</string>
    <string name="second_slide_desc">Notifies you before the start and end of your lectures and helps in attending online classes with ease. </string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <string name="user_data_email">EMAIL</string>
    <string name="user_data_branch">BRANCH</string>
    <string name="user_data_college">COLLEGE</string>
    <string name="collection_user">users</string>
    <string name="collection_time_table">timetable</string>
    <string name="document_user_info">user-info</string>

</resources>
