<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.TimeTableFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TimeTableFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shapes1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/profileicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/adobecleanbold"
        android:text="@string/timetable_fragment_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#101010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/time_table_fragment_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mon_button" />

    <Button
        android:id="@+id/mon_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_mon"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/tue_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_tue"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/mon_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/wed_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_wed"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tue_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/thu_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_thu"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/wed_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/fri_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_fri"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/thu_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/sat_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_sat"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/fri_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/sun_button"
        android:layout_width="53dp"
        android:layout_height="22dp"
        android:background="@color/cardview_light_background"
        android:text="@string/time_table_fragment_sun"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/sat_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>