<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">


  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:src="@drawable/shapes1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView2"
      android:layout_width="360dp"
      android:layout_height="80dp"
      android:layout_marginTop="12dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:background="#00ffffff"
        android:src="@drawable/branchicon" />

    <TextView
        android:id="@+id/branch_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/adobecleanbold"
        android:text="@string/branch"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView3"
      android:layout_width="360dp"
      android:layout_height="80dp"
      android:layout_marginTop="16dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="32dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView2"
      app:layout_constraintVertical_bias="0.0">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="#00ffffff"
        android:src="@drawable/groupicon" />

    <TextView
        android:id="@+id/group_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/adobecleanbold"
        android:text="@string/group"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

  </androidx.cardview.widget.CardView>

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/circlepic"
      android:layout_width="160dp"
      android:layout_height="160dp"

      android:src="@drawable/profileicon"
      app:civ_border_color="#FF000000"
      app:civ_border_width="2dp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.438"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView5" />

  <TextView
      android:id="@+id/user_name_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/adobecleanbold"
      android:text="@string/Username"
      android:textColor="@android:color/black"
      android:textSize="36dp"
      app:layout_constraintBottom_toTopOf="@+id/cardView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_image" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="360dp"
      android:layout_height="80dp"
      android:layout_marginTop="20dp"
      app:cardCornerRadius="10dp"
      app:cardElevation="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="#00ffffff"
        android:src="@drawable/university" />

    <TextView
        android:id="@+id/college_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/adobecleanbold"
        android:text="@string/collegename"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

  </androidx.cardview.widget.CardView>

  <ImageView
      android:id="@+id/logout_iv"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginEnd="8dp"
      android:src="@drawable/logouticon"
      app:layout_constraintBottom_toBottomOf="@+id/logoutTv"
      app:layout_constraintEnd_toStartOf="@+id/logoutTv"
      app:layout_constraintTop_toTopOf="@+id/logoutTv"
      app:layout_constraintVertical_bias="0.172" />

  <TextView
      android:id="@+id/logoutTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/adobecleanbold"
      android:gravity="center"
      android:text="Logout?"
      android:textColor="@color/colorPrimary"
      android:textSize="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/cardView3"
      app:layout_constraintTop_toBottomOf="@+id/cardView3"
      app:layout_constraintVertical_bias="0.173" />

  <ImageView
      android:id="@+id/dpchange"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="148dp"
      android:src="@drawable/edit_icon"
      app:layout_constraintBottom_toTopOf="@+id/user_name_tv"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.605"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>